force-app/main/default/objects/WOCreation__mdt/WOCreation__mdt.object-meta.xml
<CustomObject>
    <label>WOCreation</label>
    <pluralLabel>WOCreations</pluralLabel>
</CustomObject>