force-app/main/default/objects/WOCreation__mdt/fields/Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype__c</fullName>
    <label>Case Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>