force-app/main/default/objects/WOCreation__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>