force-app/main/default/objects/WOCreation__mdt/fields/Is_Asset_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Asset_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>an asset to be selected if a WO is required</description>
    <label>Is Asset Mandatory</label>
    <type>Checkbox</type>
</CustomField>