force-app/main/default/objects/WOCreation__mdt/fields/WO_Needed__c.field-meta.xml
<CustomField>
    <fullName>WO_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WO Needed</label>
    <type>Checkbox</type>
</CustomField>